--- a/movieapp/templates/index.html
+++ b/movieapp/templates/index.html
@@ -1,22 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class ='container'>
-    <div class="row">
-{% for i in movie_list %}
-        <div class ="col-md-3">
-
-<div class="card">
-  <img src="{{i.image.url}}"width="50px" height="200px" class="card-img-top"  alt="...">
+<!--<div class="container">
+  <div class="row">
+    {% for i in movie_list %}
+    <div class="col-md-3">
+      <div class="card">
+        <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{ i.name }}</h5>
+          <p class="card-text">{{ i.desc }}</p>
+          <a class="btn btn-warning" href="{% url 'movieapp:detail' i.id %}" id="view-btn">View Details</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>-->
+<div class="container">
+  <div class="row">
+    {% for i in movie_list %}
+    <div class="col-md-3" style=" margin:15px">
+<div class="card" style="width: 18rem; "  >
+  <img src="{{ i.image.url }}" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">{{i.name}}</h5>
-    <p class="card-text">{{i.desc}}</p>
-    <a class="btn btn-warning" href="{% url 'movieapp:detail' i.id %}" id="view-btn">view details</a>
+    <h5 class="card-title">{{ i.name }}</h5>
+    <p class="card-text">{{ i.desc }}</p>
+    <a class="btn btn-warning" href="{% url 'movieapp:detail' i.id %}" class="btn btn-primary">View Details</a>
   </div>
 </div>
-</div>
-  {% endfor %}
-        </div>
-    </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>-->
+
+
+
 
 
 
