--- a/movieapp/templates/index.html
+++ b/movieapp/templates/index.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<!--<div class="container">
+<style>
+  .card-img-top {
+    height: 200px; /* Adjust the desired height */
+    width: 100%; /* Adjust the desired width */
+    object-fit: cover; /* Maintain aspect ratio and fill the available space */
+  }
+</style>
+
+<div class="container">
   <div class="row">
     {% for i in movie_list %}
     <div class="col-md-3">
@@ -15,23 +23,10 @@
     </div>
     {% endfor %}
   </div>
-</div>-->
-<div class="container">
-  <div class="row">
-    {% for i in movie_list %}
-    <div class="col-md-3" style=" margin:15px">
-<div class="card" style="width: 18rem; "  >
-  <img src="{{ i.image.url }}" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{ i.name }}</h5>
-    <p class="card-text">{{ i.desc }}</p>
-    <a class="btn btn-warning" href="{% url 'movieapp:detail' i.id %}" class="btn btn-primary">View Details</a>
-  </div>
 </div>
-      </div>
-    {% endfor %}
-  </div>
-</div>-->
+
+
+
 
 
 
