--- a/movieapp/templates/index.html
+++ b/movieapp/templates/index.html
@@ -7,7 +7,7 @@
     object-fit: cover; /* Maintain aspect ratio and fill the available space */
   }
 </style>
-
+<!--
 <div class="container">
   <div class="row">
     {% for i in movie_list %}
@@ -23,7 +23,45 @@
     </div>
     {% endfor %}
   </div>
+</div>-->
+<!--<div class="container">
+  <div class="row justify-content-center">
+    {% for i in movie_list %}
+    <div class="col-md-3 d-flex">
+      <div class="card flex-fill">
+        <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{ i.name }}</h5>
+          <p class="card-text">{{ i.desc }}</p>
+          <a class="btn btn-warning" href="{% url 'movieapp:detail' i.id %}" id="view-btn">View Details</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>-->
+<div class="container">
+  <div class="row justify-content-center">
+    {% for i in movie_list %}
+    <div class="col-md-3 d-flex">
+      <div class="card flex-fill">
+        <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">{{ i.name }}</h5>
+          <p class="card-text flex-grow-1">{{ i.desc }}</p>
+          <div class="mt-auto">
+            <a class="btn btn-warning" href="{% url 'movieapp:detail' i.id %}" id="view-btn">View Details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
 </div>
+
+
+
+
 
 
 
