--- a/movieapp/templates/base.html
+++ b/movieapp/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <!-- Image and text -->
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="{% url 'movieapp:index'  %}">
 
     Online Movie Store
   </a>
